--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js"
-,
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node app.js"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
